# memory-core-sdk

./: CHANGELOG.md  README.md  pyproject.toml
memory_core/: __init__.py  client.py
memory_core.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
